[tool.poetry]
name = "TIDE-CLI"
version = "0.1.0"
description = ""
authors = [
	"Olli-Pekka Riikola",
	"Olli Rutanen",
	"Joni Sinokki"
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "tidecli", from = "src"}
]

[tool.poetry.dependencies]
python = ">3.10, <3.14"
requests = "^2.31.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
keyring = "^24.3.1"
unittest-prettify = "^1.0.post4"
pydantic = "^2.6.4"
pyinstaller = "^6.5.0"
pyfakefs = "^5.4.1"
testcase = "^0.1.0"
pytest-playwright = "^0.6.2"
pytest = "^8.0.0"
itsdangerous = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = {extras = ["d"], version = "^24.3.0"}

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
disallow_untyped_calls = true
namespace_packages = true


[[tool.mypy.overrides]]
module = [
    "requests",
    "PyInstaller.__main__",
    "PyInstaller"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "tidecli.pyinstaller:install"
